--- a/src/stylesheets/less/Lungo.widgets.less
+++ b/src/stylesheets/less/Lungo.widgets.less
@@ -51,10 +51,8 @@ section.copyright img{
 }
 /* @end */
 
-
-
 .bubble {
-	padding: 3px 4px;
+	padding: 2px 4px 3px;
 	.border-radius(2px);		
 	font-size: 0.8em;
 	font-weight: bold;		
