--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -6,15 +6,11 @@
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
-/* @group layout */
 .app {
   font-size: 13px;
   background: #000;
 }
-article {
-  background-color: #e2e2e2;
-}
-/* @group <header> & <footer> */
+/* @group <header> & <footer> & <article> */
 header {
   background: #019d5e -webkit-gradient(linear, left top, left bottom, color-stop(0.1, #019d5e), color-stop(1, #006b41));
   -webkit-border-radius: 6px 6px 0 0;
@@ -23,15 +19,23 @@ header {
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  -webkit-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.4), inset 0px -1px rgba(0, 0, 0, 0.5);
+  border-top: 1px solid #6dc0a1;
+  border-bottom: 1px solid #063322;
 }
 footer {
   background: #2c2c2d -webkit-gradient(linear, left top, left bottom, color-stop(0.25, #2c2c2d), color-stop(1, #1c1d1d));
-  -webkit-box-shadow: inset 0px 1px rgba(0, 0, 0, 0.5);
+  border-top: 1px inset #1c1c1c;
 }
 .title {
   color: #fff;
-  text-shadow: rgba(0, 0, 0, 0.5) 0 -1px 0px;
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.5);
+}
+article {
+  background-color: #e2e2e2;
+}
+article .title {
+  color: #797979;
+  text-shadow: 0px 1px 0px #fff;
 }
 /* @end */
 /* @group <nav> */
@@ -40,41 +44,36 @@ nav a {
 }
 nav a.current {
   color: #fff;
-  text-shadow: 0px 1px 0px #000 !important;
-}
-.toolbar {
-  box-shadow: inset 0px 1px #1c1c1c;
 }
 .toolbar a.current {
   background: #1c1c1c;
-  color: #fff;
   box-shadow: inset 0px 0px 8px #101010;
   text-shadow: 0px 1px 4px #000;
-}
-.toolbar .bubble {
-  text-shadow: none;
 }
 /* @end */
 /* @group <aside> */
 aside {
   background: #252525;
-  -webkit-box-shadow: inset -1px 0px 0px #000000, inset -4px 0px 8px rgba(0, 0, 0, 0.5);
+  box-shadow: inset -1px 0px 8px #000000;
 }
 aside a {
-  color: #fff !important;
-  text-shadow: 0px 1px 0px #000 !important;
-  border-bottom: 1px inset rgba(0, 0, 0, 0.3);
-  border-top: 1px inset rgba(255, 255, 255, 0.1);
+  color: #fff;
+  text-shadow: 0px 1px 0px #000;
+  border-bottom: 1px inset #101010;
+  border-top: 1px inset #868686;
 }
 aside a.current {
-  background: rgba(255, 255, 255, 0.1);
+  background: #1c1c1c;
+  box-shadow: inset 0px 0px 8px #101010;
+  border-top: 1px inset #1c1c1c;
 }
 aside a .icon {
-  opacity: 0.5;
+  text-shadow: none;
+  color: #7a7a7a;
 }
 aside .anchor {
-  background: #151515;
-  color: #666;
+  background: #101010;
+  color: #7a7a7a;
 }
 /* @end */
 /* @group .list */
@@ -87,6 +86,9 @@ aside .anchor {
 }
 .list li:last-child {
   border-bottom: none;
+}
+.indented ul {
+  border: 1px solid #c5c5c5;
 }
 .list .darker {
   background-color: #2c2c2d;
@@ -101,7 +103,7 @@ aside .anchor {
   box-shadow: inset 0px 1px 0px #fff;
   text-shadow: 0px 1px 0px #fff;
 }
-.list small, .list .onright {
+.list small, .list .onright:not(.bubble) {
   color: #999;
 }
 .list .tip {
@@ -113,11 +115,6 @@ aside .anchor {
 }
 .list .toolbar {
   border-bottom-color: rgba(0, 0, 0, 0.2);
-}
-.list .bubble {
-  color: #fff;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
-  box-shadow: inset 0px 0px 1px #000;
 }
 .list .arrow:before {
   color: #a9a9a9;
@@ -135,13 +132,11 @@ aside .anchor {
 }
 /* @end */
 /* @group widgets */
-/* @group <section>.splash */
 .splash article {
   background: #2c2c2d -webkit-gradient(linear, left top, left bottom, color-stop(0.25, #2c2c2d), color-stop(1, #1c1d1d)) !important;
   color: #fff;
   text-shadow: rgba(0, 0, 0, 0.5) 0 1px 1px;
 }
-/* @end */
 /* @group <inputs> */
 input, textarea, select {
   border: 1px solid #ccc;
@@ -171,10 +166,12 @@ input:focus, textarea:focus, select:focus {
   background-clip: padding-box;
 }
 /* @end */
-/* @end */
-/* @group Article */
-article .title {
-  color: #797979;
-  text-shadow: 0px 1px 0px #fff;
+.bubble {
+  color: #fff;
+  text-shadow: none;
+  box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.7);
+}
+.bubble.count {
+  background: #e33100;
 }
 /* @end */
