--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -64,10 +64,10 @@ header, footer  {
 	position: absolute;
 	left: 0px;
 	width: 100%;
-	height: 40px;
+	height: 38px;
 	display: block;
 	z-index: 2;
-	line-height: 40px;
+	line-height: 38px;
 }
 
 header  {
@@ -94,7 +94,7 @@ header .title {
 }
 
 section header a.button, section footer a.button  {
-	margin: 4px 3px auto;
+	margin: 3px 3px auto 4px;
 }
 
 section header a.button.icon, section footer a.button.icon  {
@@ -153,7 +153,12 @@ aside a{
 	
 	aside .anchor {
 		font-weight: bold;
-    	padding: 6px 10px;
+    	padding: 3px 10px 4px;
+	}
+	
+	aside .bubble {
+    	float: right;
+		margin: 12px 4px 0 0;
 	}
 
 @media handheld, only screen and (min-width: 768px) {
@@ -264,16 +269,19 @@ nav a.current {
 	
 	line-height: 52px;
 }
+
+nav .bubble {
+    position: relative;
+    top:  -10px;
+    left: -10px;
+    margin-right: -16px;       
+    font-size: 0.4em;    
+}
+
 .toolbar .bubble {
-	position: relative;
     top:  -60px;
     left: 12px;
     padding: 1px 4px;
-    display: inline;
-    
-    font-size: 0.45em;
-    
-    .border-radius(12px);
 }
 
 /* @end */
