--- a/src/stylesheets/less/Lungo.theme.default.less
+++ b/src/stylesheets/less/Lungo.theme.default.less
@@ -8,100 +8,77 @@
  */
 
 @import "mixins.less";
-
-/* @group layout */
 .app {
 	font-size: 13px;
     background: #000;
 }
-
-article {
-	background-color: #e2e2e2;
-}
 	
-/* @group <header> & <footer> */
+/* @group <header> & <footer> & <article> */
 header {
 	background: #019d5e -webkit-gradient(linear, left top, left bottom, color-stop(0.1, #019d5e), color-stop(1, #006b41));
 	
 	.border-radius(6px, 6px, 0, 0);
-	-webkit-box-shadow: 
-		inset 0px 1px 0px rgba(255,255,255,0.4), 
-		inset 0px -1px rgba(0,0,0,0.5)
+	border-top: 1px solid #6dc0a1;	
+	border-bottom: 1px solid #063322;
 }
 	
 footer {
 	background: #2c2c2d -webkit-gradient(linear, left top, left bottom, color-stop(0.25, #2c2c2d), color-stop(1, #1c1d1d));
-	
-	-webkit-box-shadow: inset 0px 1px rgba(0,0,0,0.5);
+	border-top: 1px inset #1c1c1c;
 }
-
-
 
 .title {
 	color: #fff;
-	text-shadow: rgba(0,0,0,0.5) 0 -1px 0px; 
+	text-shadow: 0px -1px 0px rgba(0,0,0,0.5) ; 
 }
+
+article { background-color: #e2e2e2; }
+	
+	article .title {
+    	color: #797979;
+    	text-shadow: 0px 1px 0px #fff;
+	}
 /* @end */
 
 /* @group <nav> */
-nav a {
-	color: rgba(0,0,0,0.5);
-	//text-shadow: rgba(255,255,255,0.35) 0 1px 1px;
-}
+nav a { color: rgba(0,0,0,0.5); }
 
-nav a.current {
-	color: #fff;
-	text-shadow: 0px 1px 0px #000 !important;
-}
-
-.toolbar {
-    //background: #f00;
-    box-shadow: inset 0px 1px #1c1c1c;
-}
-
-.toolbar a {
-    //line-height: 44px;
-}
+nav a.current { color: #fff; }
 
 .toolbar a.current{
 	background: #1c1c1c;
-	color: #fff;
-	
 	box-shadow: inset 0px 0px 8px #101010;
 	text-shadow: 0px 1px 4px #000;
-}
-
-.toolbar .bubble {
-    text-shadow: none;
-}
-	
+}	
 /* @end */
 
 /* @group <aside> */
 aside {
     background: #252525;
-	-webkit-box-shadow: inset -1px 0px 0px #000, inset -4px 0px 8px rgba(0,0,0, 0.5);
+	box-shadow: inset -1px 0px 8px #000;
 }
-
-aside a{
-	color: #fff !important;
-    text-shadow: 0px 1px 0px #000 !important;
-    border-bottom: 1px inset rgba(0,0,0,0.3);
-    border-top: 1px inset rgba(255,255,255,0.1);
-}
-
-aside a.current {
-	background: rgba(255,255,255,0.1);
-}
-
-aside a .icon {
-	opacity: 0.5;
-}
-
-aside .anchor {
-    background: #151515;
-	color:  #666;
-}
+	aside a {
+		color: #fff;
+	    text-shadow: 0px 1px 0px #000;    
+	    border-bottom: 1px inset #101010;
+		border-top: 1px inset #868686;
+	}
+	
+	aside a.current { 
+		background: #1c1c1c;
+		box-shadow: inset 0px 0px 8px #101010;
+		border-top: 1px inset #1c1c1c;
+	}
+	
+	aside a .icon { 
+		text-shadow: none; 
+		color: #7a7a7a;
+	}
+	
+	aside .anchor {
+	    background: #101010;
+		color:  #7a7a7a;
+	}
 
 /* @end */
 
@@ -116,12 +93,15 @@ aside .anchor {
 	
 	.list li:last-child { border-bottom: none; }
 	
+	.indented ul {
+    	border: 1px solid #c5c5c5;
+	}
+	
 	.list .darker {
 		background-color: #2c2c2d;	
 		color: #fff;
 		text-shadow: 0px 1px 0px #000;
 	}
-	
 		.list li.darker a{ color: #fff !important; }
 	
 	.list .dark {
@@ -130,7 +110,7 @@ aside .anchor {
 		text-shadow: 0px 1px 0px #fff;
 	}
 
-	.list small, .list .onright {
+	.list small, .list .onright:not(.bubble) {
 		color: #999;
 	}
 	
@@ -145,12 +125,6 @@ aside .anchor {
 	
 	.list .toolbar {
 		border-bottom-color: rgba(0,0,0,0.2);
-	}
-
-	.list .bubble {
-		color: #fff; 
-		text-shadow: 0 -1px 0 rgba(0,0,0,.3);
-		box-shadow: inset 0px 0px 1px #000;
 	}	
 	
 	.list .arrow:before {
@@ -166,18 +140,15 @@ aside .anchor {
 			color: #333;
 			text-shadow: none !important;
 		}
-
 /* @end */
 
 /* @group widgets */
 
-/* @group <section>.splash */
 .splash article { 
 	background: #2c2c2d -webkit-gradient(linear, left top, left bottom, color-stop(0.25, #2c2c2d), color-stop(1, #1c1d1d)) !important;
 	color: #fff; 
 	text-shadow: rgba(0,0,0,0.5) 0 1px 1px;
 }
-/* @end */
 
 /* @group <inputs> */
 input, textarea, select {
@@ -198,14 +169,11 @@ input:focus, textarea:focus, select:focus {
 	.border-radius(0 2px 2px 0);
 }
 /* @end */
-/* @end */
 
-/* @group Article */
-
-article .title {
-    color: #797979;
-    text-shadow: 0px 1px 0px #fff;
+.bubble {
+	color: #fff;
+	text-shadow: none;
+	box-shadow: inset 0px 0px 2px rgba(0,0,0,0.7);
 }
-    		
-
+	.bubble.count { background: #e33100; }
 /* @end */
