--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -201,13 +201,8 @@ article {
 	
 	article.aside { left: 256px !important; }
 	
-	article.indented > *:only-child{
-    	padding: 10px;
-    	width: auto;
-	}
-	
 	article .title {
-		font-size: 15px;
+		font-size: 1.2em;
 		margin: 0 4px 4px;
 	}
 		
