--- a/src/stylesheets/less/Lungo.layout.list.less
+++ b/src/stylesheets/less/Lungo.layout.list.less
@@ -40,7 +40,9 @@
 		text-overflow: ellipsis;
 		font-size: 0.85em;
 		font-weight: normal;
+		line-height: 0.85em;
 	}
+	
 	
 	.list .icon {
 	    display: inline-block;
