--- a/src/stylesheets/less/Lungo.widgets.splash.less
+++ b/src/stylesheets/less/Lungo.widgets.splash.less
@@ -7,26 +7,32 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
  
-.splash article { 
-	height: 100%;
+.splash{ 
 	text-align: center;
+	font-size: 1.2em;
 }
 
 .splash img {
 	max-width: 206px;
-	margin: 128px auto 32px;
+	margin: 92px auto 32px;
 }
 	
 .splash h1 {
-	margin: 128px auto 16px;
+	margin: 92px auto 16px;
 	
-	font-size: 2.5em; 
+	font-size: 2.2em; 
 	font-weight: bold;
+}
+
+.splash .button.big {
+    margin-top: 16px;
 }
 	
 .splash .copyright { 
 	position: absolute; 
 	width: 100%; 
 	bottom: 4px;
+	left: 0px;
+	font-size: 0.75em;
 	font-style: normal; 
 }
