--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -132,38 +132,34 @@ aside .anchor {
 }
 /* @end */
 /* @group widgets */
-.splash article {
-  background: #2c2c2d -webkit-gradient(linear, left top, left bottom, color-stop(0.25, #2c2c2d), color-stop(1, #1c1d1d)) !important;
+.splash {
+  background: #019d5e -webkit-gradient(linear, left top, left bottom, color-stop(0.1, #019d5e), color-stop(1, #006b41));
   color: #fff;
-  text-shadow: rgba(0, 0, 0, 0.5) 0 1px 1px;
+  text-shadow: 0px 1px 1px #000;
 }
 /* @group <inputs> */
 input, textarea, select {
-  border: 1px solid #ccc;
+  border: 1px solid #c5c5c5;
+  background: #ffffff -webkit-gradient(linear, left top, left bottom, color-stop(0, #eeeeee), color-stop(0.25, #ffffff));
+}
+.rounded input, textarea, select {
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  background: #ffffff -webkit-gradient(linear, left top, left bottom, color-stop(0, #dddddd), color-stop(0.15, #ffffff));
 }
 input:focus, textarea:focus, select:focus {
   border: 1px solid #058cf5;
-  -webkit-box-shadow: 0 0 4px 1px #058cf5;
-  -moz-box-shadow: 0 0 4px 1px #058cf5;
-  box-shadow: 0 0 4px 1px #058cf5;
+  -webkit-box-shadow: 0px 0px 4px 0px #058cf5;
+  -moz-box-shadow: 0px 0px 4px 0px #058cf5;
+  box-shadow: 0px 0px 4px 0px #058cf5;
   background: #e8fefe;
 }
 .select:after {
   background: #ccc;
   color: white;
-  -webkit-border-radius: 0 2px 2px 0;
-  -moz-border-radius: 0 2px 2px 0;
-  border-radius: 0 2px 2px 0;
-  -webkit-background-clip: padding-box;
-  -moz-background-clip: padding;
-  background-clip: padding-box;
 }
 /* @end */
 .bubble {
