--- a/src/stylesheets/css/Lungo.widgets.css
+++ b/src/stylesheets/css/Lungo.widgets.css
@@ -1,12 +1,15 @@
 .scroll,scroll{position:relative;display:block;width:100%;height:100%;}
 section.copyright{margin-top:128px;z-index:1000;background:#000;text-align:center;font-size:24px;}
 section.copyright img{max-height:128px;}
-.scroll{overflow:scroll;-webkit-overflow-scrolling:touch;}
-.hidden{display:none;}
 .onleft{float:left;}
 .onright{float:right;}
+.indented{padding:10px;width:auto;}
+.margin-top-4{margin-top:4px;}
+.hidden{display:none;}
+.semi-opacity{opacity:0.5;}
+.size32{font-size:32px;height:32px;width:32px;line-height:32px;}
+.mini{font-size:20px !important;height:16px !important;width:16px !important;line-height:16px !important;}
 .framed{border:2px solid #fff;}
 .round{-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;-webkit-background-clip:padding-box;-moz-background-clip:padding;background-clip:padding-box;}
-.semi-opacity{opacity:0.5;}
-.margin-top-4{margin-top:4px;}
 .bubble{padding:2px 4px 3px;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;-webkit-background-clip:padding-box;-moz-background-clip:padding;background-clip:padding-box;font-size:0.8em;font-weight:bold;line-height:1.0em;}
+.scroll{overflow:scroll;-webkit-overflow-scrolling:touch;}
