--- a/src/stylesheets/less/Lungo.widgets.button.less
+++ b/src/stylesheets/less/Lungo.widgets.button.less
@@ -43,8 +43,8 @@ a.button:active{ background-color: rgba(0,0,0,0.5); }
   
 a.button:disabled, a.button.disabled {
 	background: rgba(255,255,255,0.2);
-	border: 1px solid rgba(0,0,0,0.3);
-	color: rgba(0,0,0,0.5); 
+	border: 1px solid #999;
+	color: #999 !important; 
 	.box-shadow(inset 0 -5px 5px rgba(40,40,40,0.1));	
 	text-shadow: none;
 }
