--- a/src/stylesheets/less/Lungo.widgets.less
+++ b/src/stylesheets/less/Lungo.widgets.less
@@ -28,27 +28,48 @@ section.copyright img{
 	max-height: 128px;
 }
 
-/* @group .classes */
-.scroll {
-  	overflow: scroll;
-  	-webkit-overflow-scrolling: touch;
+/* @group .position */
+.onleft { float: left; }
+
+.onright { float: right;}
+	
+.indented {
+	padding: 10px;
+    width: auto;
 }
-.hidden { 
-	display: none; }
-.onleft { 
-	float: left; }
-.onright { 
-	float: right;}
-.framed{
-	border: 2px solid #fff;}
-.round{
-	.border-radius(4px);}
-.semi-opacity{
-	opacity: 0.5;
+
+.margin-top-4{ margin-top: 4px; }
+/* @end */
+
+/* @group .visibility */
+.hidden { display: none; }
+.semi-opacity{ opacity: 0.5; }
+/* @end */
+
+/* @group .sizing */
+.size32 {
+	font-size: 32px;
+    height: 32px;
+    width: 32px;
+    line-height: 32px;
 }
-.margin-top-4{
-	margin-top: 4px;
+
+.mini {
+	font-size: 20px !important;
+    height: 16px !important;
+    width: 16px !important;
+    line-height: 16px !important;
 }
+/* @end */
+
+
+
+.framed { border: 2px solid #fff;}
+
+.round { .border-radius(4px); }
+
+
+
 /* @end */
 
 .bubble {
@@ -57,4 +78,10 @@ section.copyright img{
 	font-size: 0.8em;
 	font-weight: bold;		
 	line-height: 1.0em;
+}
+
+
+.scroll {
+  	overflow: scroll;
+  	-webkit-overflow-scrolling: touch;
 }
