--- a/src/stylesheets/css/Lungo.widgets.colour.css
+++ b/src/stylesheets/css/Lungo.widgets.colour.css
@@ -1,5 +1,7 @@
-a.grey,.grey{background-color:#ccc;}
+a.grey,.grey{background-color:#cccccc;}
 a.grey:active{background-color:#b5b5b5;}
+a.black,.grey{background-color:#2c2c2d;}
+a.black:active{background-color:#000000;}
 a.red,.red{background-color:#e33100;}
 a.red:active{background-color:#c5280f;}
 a.lightgreen,.lightgreen{background-color:#91bd09;}
@@ -24,7 +26,8 @@ a.twitter,.twitter:not(span){background-color:#35cdff;}
 a.twitter:active{background-color:#2bafda;}
 a.facebook,.facebook:not(span){background-color:#3b5998;}
 a.facebook:active{background-color:#2c4579;}
-li.grey{box-shadow:inset 3px 0px 0px #ccc;}
+li.grey{box-shadow:inset 3px 0px 0px #cccccc;}
+li.black{box-shadow:inset 3px 0px 0px #2c2c2d;}
 li.red{box-shadow:inset 3px 0px 0px #e33100;}
 li.lightgreen{box-shadow:inset 3px 0px 0px #91bd09;}
 li.green{box-shadow:inset 3px 0px 0px #009600;}
