--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -7,18 +7,11 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 .app {
-  font-size: 13px;
-  background: #000;
+  background: #000000;
 }
 /* @group <header> & <footer> & <article> */
 header {
   background: #019d5e -webkit-gradient(linear, left top, left bottom, color-stop(0.1, #019d5e), color-stop(1, #006b41));
-  -webkit-border-radius: 6px 6px 0 0;
-  -moz-border-radius: 6px 6px 0 0;
-  border-radius: 6px 6px 0 0;
-  -webkit-background-clip: padding-box;
-  -moz-background-clip: padding;
-  background-clip: padding-box;
   border-top: 1px solid #6dc0a1;
   border-bottom: 1px solid #063322;
 }
@@ -54,7 +47,6 @@ nav a.current {
 /* @group <aside> */
 aside {
   background: #252525;
-  box-shadow: inset -1px 0px 8px #000000;
 }
 aside a {
   color: #fff;
@@ -74,6 +66,9 @@ aside a .icon {
 aside .anchor {
   background: #101010;
   color: #7a7a7a;
+}
+aside ~ article {
+  box-shadow: -1px 0px 4px #000000;
 }
 /* @end */
 /* @group .list */
@@ -144,16 +139,13 @@ input, textarea, select {
 }
 .rounded input, textarea, select {
   -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
   border-radius: 2px;
   -webkit-background-clip: padding-box;
-  -moz-background-clip: padding;
   background-clip: padding-box;
 }
 input:focus, textarea:focus, select:focus {
   border: 1px solid #058cf5;
   -webkit-box-shadow: 0px 0px 4px 0px #058cf5;
-  -moz-box-shadow: 0px 0px 4px 0px #058cf5;
   box-shadow: 0px 0px 4px 0px #058cf5;
   background: #e8fefe;
 }
