--- a/src/stylesheets/less/Lungo.theme.default.less
+++ b/src/stylesheets/less/Lungo.theme.default.less
@@ -8,16 +8,15 @@
  */
 
 @import "mixins.less";
+
 .app {
-	font-size: 13px;
-    background: #000;
+    background: @black;
 }
 	
 /* @group <header> & <footer> & <article> */
 header {
 	background: #019d5e -webkit-gradient(linear, left top, left bottom, color-stop(0.1, #019d5e), color-stop(1, #006b41));
 	
-	.border-radius(6px, 6px, 0, 0);
 	border-top: 1px solid #6dc0a1;	
 	border-bottom: 1px solid #063322;
 }
@@ -53,9 +52,9 @@ nav a.current { color: #fff; }
 /* @end */
 
 /* @group <aside> */
+
 aside {
     background: #252525;
-	box-shadow: inset -1px 0px 8px #000;
 }
 	aside a {
 		color: #fff;
@@ -78,6 +77,10 @@ aside {
 	aside .anchor {
 	    background: #101010;
 		color:  #7a7a7a;
+	}
+	
+	aside ~ article {
+		box-shadow: -1px 0px 4px #000;
 	}
 
 /* @end */
@@ -148,7 +151,6 @@ aside {
 	background: #019d5e -webkit-gradient(linear, left top, left bottom, color-stop(0.1, #019d5e), color-stop(1, #006b41));
 	color: #fff; 
 	text-shadow: 0px 1px 1px #000;
-	
 }
 
 /* @group <inputs> */
