Stylesheet for .copyright class

--- a/src/stylesheets/less/Lungo.widgets.less
+++ b/src/stylesheets/less/Lungo.widgets.less
@@ -16,14 +16,6 @@
 	height: 100%;
 }
 
-section.copyright {
-	margin-top: 128px;
-	z-index: 1000;
-	background: #000;
-	text-align: center;	
-	font-size: 24px;
-}
-
 section.copyright img{
 	max-height: 128px;
 }
@@ -39,7 +31,7 @@ section.copyright img{
 }
 
 .indented ul {
-		//margin-bottom: 10px;
+		margin-bottom: 10px;
 		height: inherit;
 	}
 	.rounded ul { .border-radius(4px); }	
