--- a/src/stylesheets/less/Lungo.widgets.splash.less
+++ b/src/stylesheets/less/Lungo.widgets.splash.less
@@ -27,12 +27,12 @@
 .splash .button.big {
     margin-top: 16px;
 }
-	
+
 .splash .copyright { 
-	position: absolute; 
+	position: fixed; 
 	width: 100%; 
-	bottom: 4px;
+	bottom: 8px;
 	left: 0px;
-	font-size: 0.75em;
+	font-size: 0.8em;
 	font-style: normal; 
 }
