--- a/src/stylesheets/css/Lungo.widgets.splash.css
+++ b/src/stylesheets/css/Lungo.widgets.splash.css
@@ -2,4 +2,4 @@
 .splash img{max-width:206px;margin:92px auto 32px;}
 .splash h1{margin:92px auto 16px;font-size:2.2em;font-weight:bold;}
 .splash .button.big{margin-top:16px;}
-.splash .copyright{position:absolute;width:100%;bottom:4px;left:0px;font-size:0.75em;font-style:normal;}
+.splash .copyright{position:fixed;width:100%;bottom:8px;left:0px;font-size:0.8em;font-style:normal;}
