--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -12,10 +12,6 @@
 @defaultTrasition : @easeOutSine;
 
 /* @group <section> */
-body {
-	height: 100%;
-}
-
 section{
 	position: absolute;
 	position: fixed;
@@ -195,7 +191,7 @@ article {
 	
 	article .title {
 		font-size: 1.1em;
-		margin: 0 4px 4px;
+		margin: 0px 4px 4px;
 	}
 		
 		article .title .icon { margin-right: 4px; }
