--- a/src/stylesheets/less/Lungo.layout.list.less
+++ b/src/stylesheets/less/Lungo.layout.list.less
@@ -10,13 +10,13 @@
  @import "mixins.less";
  
 .list {
-    font-size: 1.2em;
-    font-weight: bold;
     width: inherit;
+    font-size: 1.2em;
+    line-height: 1.05em;
+    font-weight: bold;
 }
- 
 	.list li:not(.toolbar) {
-		padding: 8px 6px;
+		padding: 8px 6px 8px 8px;
 		list-style-type: none;
 	}
 	
@@ -40,7 +40,6 @@
 		text-overflow: ellipsis;
 		font-size: 0.85em;
 		font-weight: normal;
-		line-height: 0.85em;
 	}
 	
 	
