--- a/src/stylesheets/css/Lungo.widgets.css
+++ b/src/stylesheets/css/Lungo.widgets.css
@@ -1,9 +1,9 @@
-.scroll,scroll{position:relative;display:block;width:100%;height:100%;}
-section.copyright img{max-height:128px;}
+.scrollable{position:absolute;display:block;width:100%;height:100%;}
+.scroll{overflow:scroll;-webkit-overflow-scrolling:touch;}
 .onleft{float:left;}
 .onright{float:right;}
-.indented{width:auto;padding:10px 10px 0;}
-.indented ul{margin-bottom:10px;height:inherit;}
+.indented{width:auto;height:auto;padding:10px 10px 0px;}
+.indented ul{margin-bottom:10px;height:auto;width:inherit;}
 .rounded ul{-webkit-border-radius:4px;border-radius:4px;-webkit-background-clip:padding-box;background-clip:padding-box;}
 .rounded li:first-child{-webkit-border-radius:4px 4px 0px 0px;border-radius:4px 4px 0px 0px;-webkit-background-clip:padding-box;background-clip:padding-box;}
 .rounded li:last-child{-webkit-border-radius:0px 0px 4px 4px;border-radius:0px 0px 4px 4px;-webkit-background-clip:padding-box;background-clip:padding-box;}
@@ -15,4 +15,3 @@ section.copyright img{max-height:128px;}
 .framed{border:2px solid #fff;}
 .round{-webkit-border-radius:4px;border-radius:4px;-webkit-background-clip:padding-box;background-clip:padding-box;}
 .bubble{padding:2px 4px 3px;-webkit-border-radius:2px;border-radius:2px;-webkit-background-clip:padding-box;background-clip:padding-box;font-size:0.8em;font-weight:bold;line-height:1.0em;}
-.scroll{overflow:scroll;-webkit-overflow-scrolling:touch;}
