--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -191,11 +191,17 @@ article {
 	
 	article .title {
 		font-size: 1.1em;
-		margin: 0px 4px 4px;
+		 margin: 0px 0 4px;
 	}
 		
 		article .title .icon { margin-right: 4px; }
-				
+	
+	article .text {
+		margin: 4px 0;
+		display: block;
+    	font-size: 0.9em;
+    	font-weight: normal;
+	}			
 /* @end */
 
 /* @group <nav> */
