--- a/src/stylesheets/less/Lungo.layout.list.less
+++ b/src/stylesheets/less/Lungo.layout.list.less
@@ -57,7 +57,7 @@
     	font-weight: normal;
 	}
 
-	.list .anchor { 	
+	.list li.anchor { 	
 		font-size: 0.75em;
 		padding: 3px 6px !important;
 	}
