--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -197,10 +197,11 @@ article {
 		article .title .icon { margin-right: 4px; }
 	
 	article .text {
-		margin: 4px 0;
+		margin: 4px 0 8px;
 		display: block;
     	font-size: 0.9em;
     	font-weight: normal;
+    	line-height: 1.4em;
 	}			
 /* @end */
 
