--- a/src/stylesheets/css/Lungo.layout.list.css
+++ b/src/stylesheets/css/Lungo.layout.list.css
@@ -6,7 +6,7 @@
 .list .icon{display:inline-block;}
 .list .tip{font-size:0.85em;font-weight:bold;}
 .list .light{font-size:0.9em;font-weight:normal;}
-.list .anchor{font-size:0.75em;padding:3px 6px !important;}
+.list li.anchor{font-size:0.75em;padding:3px 6px !important;}
 .list .anchor .icon{width:14px !important;height:14px !important;margin-right:4px !important;font-size:1.3em !important;line-height:16px !important;}
 .list .anchor .bubble{display:none;}
 .list .search input{width:88%;}
