--- a/src/stylesheets/less/Lungo.widgets.form.less
+++ b/src/stylesheets/less/Lungo.widgets.form.less
@@ -10,13 +10,12 @@
 @import "mixins.less";
 
 .form, form {
-	font-size: 0.95em;
+	font-size: 0.9em;
 	width: inherit !important;
 }
 
-label:not(.checkbox) {
-    display: block;
-    margin-bottom: 2px;
+label {
+    line-height: 27px;
 }
 
 input:not([type=checkbox]), textarea, select {  
@@ -27,8 +26,8 @@ input:not([type=checkbox]), textarea, select {
 	
 	outline: none; 	
 	-webkit-appearance: none;
-		
-	font-size: 1.0em;
+	font-size:  14px;
+	
 	font-weight: bold;
 	line-height: 1.25em;
 }
@@ -41,14 +40,12 @@ input[type=search] {
 	    float: right;
 	    padding: 0px;
 	    width: 32px;
+	    height: 30px;
 	}
 	input[type=search] + .button .icon{
-	    font-size: 20px !important;
+	    font-size: 22px !important;	    
+	    line-height: 30px;
 	}
-
-
-
-
 /* @end */
 
 select{ 
@@ -60,51 +57,44 @@ label.select {
     position: relative;
     display: inline-block;
     width: 100%;
+	padding-top: 2px;
 }
     
 .select:after {
-	padding: 0 7px;
+	text-align: center;
 	position: absolute;
 	top: 0;
 	right: 0;
 	bottom: 0;
-	height:30px;
+	height:29px;
+	width: 29px;
 	
 	content: "▼";     
-	pointer-events:none;
-	
-	font-size: 60%;
+	pointer-events:none;	
 	line-height: 32px;
+	margin-top: 2px;
 }
     
 .no-pointer-events .select:after {
 	content: none;
 }
 
+/* @group Switch */
+
 input[type="checkbox"], input[type="radio"]{
-	width: 74px;
-	float: left;
+	width: 82px;
+	height: 27px;
 	z-index: 2;
 }
 
 input[type="checkbox"] + span::after,
    input[type="radio"] + span::after {
-	content: "off";
+	content: "OFF";
 }
 
 input[type="checkbox"]:checked + span::after,
    input[type="radio"]:checked + span::after {
-	content: "on";
-}
-
-.iphone-toggle-buttons {
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	user-select: none;
-}
-
-.iphone-toggle-buttons {
-	margin: 4px 0;
+	content: "ON";
 }
 
 input[type="checkbox"] + span,
@@ -113,9 +103,6 @@ input[type="checkbox"] + span,
    input[type="radio"] + span::before,
    input[type="checkbox"] + span::after,
    input[type="radio"] + span::after {
-	-moz-border-radius: 16px;
-	-webkit-border-radius: 16px;
-	border-radius: 16px;
 	display: inline-block;
 }
 
@@ -155,71 +142,50 @@ input[type="checkbox"],
 
 input[type="checkbox"],
    input[type="radio"] {
-	filter: alpha(opacity=0);
-	-moz-opacity: 0;
 	-webkit-opacity: 0;
 	opacity: 0;
 }
 
 input[type="checkbox"] + span,
    input[type="radio"] + span {
-	width: 74px;
-	
-	margin-bottom: 8px; 
-	height: 30px;
-	font: bold 14px/30px Arial, Sans-serif;
-	color: #8c8c8c;
-	text-transform: uppercase;
-	border: solid 1px #bcbbbb;
-
-	background: #c8c8c8 -webkit-gradient(linear, left top, left bottom, color-stop(0, #c8c8c8), color-stop(1, #f3f3f3));
+	width: 82px;
+	height:27px;
 	position: relative;
+	font-size: 11px;
+	line-height: 29px;
+	font-weight: bold;
+	text-transform: uppercase;
 	text-indent: -9999px;
 }
 
 input[type="checkbox"] + span::before,
    input[type="radio"] + span::before {
 	content: "";
-	width: 29px;
-	height: 29px;
-	border-top: solid 1px #fff;
-	border-right: solid 1px #bebebe;
-
-	background: #cfcfcf -webkit-gradient(linear, left top, left bottom, color-stop(0, #cfcfcf), color-stop(1, #f9f9f9));
-	.box-shadow(1px 0 1px #bebebe);
+	width: 41px;
+	height: 27px;
 }
 
 input[type="checkbox"] + span::after,
    input[type="radio"] + span::after {
 	text-indent: 0;
-	width: 56px;
-	height: 32px;
+	width: 41px;
+	height: 27px;
 	text-align: center;
-}
-
-input[type="checkbox"]:checked + span, input[type="radio"]:checked + span {
-	background: #5d96ea -webkit-gradient(linear, left top, left bottom, color-stop(0, #1b45bd), color-stop(1, #5d96ea));
-	color: #fff;
-	text-shadow: -1px -1px #0d2046;
+	box-shadow: 0px 1px 0px #fff, 0px 2px 0px #d2d2d2;
 }
 
 input[type="checkbox"]:checked + span::before,
    input[type="radio"]:checked + span::before {
 	left: auto;
-	-webkit-box-shadow: -2px 0 1px #3a5e91;
-	.box-shadow(-2px 0 1px #3a5e91);
 }
 
 input[type="checkbox"]:checked + span::after,
    input[type="radio"]:checked + span::after {
-	border-top: solid 1px #0f2a4f;
-	border-bottom: solid 1px #0f2a4f;
-	border-left: solid 1px #2c5496;
-	height: 30px;
-	top: -1px;
-	left: -1px;
-	.border-radius(16px 0 0 16px);
+	height: 27px;
 }
+/* @end */
+
+
 
 @media screen and (-webkit-min-device-pixel-ratio:0) { 
 	.custom-select select {padding-right:30px;}
